se agrega un signo de puntuación

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <!-- 2. Datos personales y presentación -->
   <section id="presentacion">
     <h3>Sobre mí</h3>
-    <p>Apasionado de la tecnología con conocimientos en sistemas, soporte, análisis y programación 
+    <p>Apasionado de la tecnología con conocimientos en sistemas, soporte, análisis y programación,  
         principalmente en entornos web de javascript, html, css, y móvil nativo con Kotlin, Java y Android Studio. 
-        Experiencia en metodologías  ágiles, flujos de trabajo, buenas prácticas y lógica de negocio en TI.
+        Experiencia en metodologías ágiles, flujos de trabajo, buenas prácticas y lógica de negocio en TI.
         Proactivo y creativo, feliz de poder contribuir en equipos y crecer profesionalmente en entornos dinámicos.</p>
     </section>
 
